# agui-reconnect-poc

./: .gitignore  Plan.md  README.md  ag-ui-langgraph-pros-cons.md  ag-ui-langgraph-walkthrough.md  justfile  pyproject.toml  walkthrough.md
docs/superpowers/plans/: 2026-03-29-reconnection-improvements.md  2026-03-29-stream-reconnection-refinements.md  2026-03-30-pubsub-reconnection-redesign.md  2026-04-04-template-agent.md  2026-04-06-template-subgraphs.md
docs/superpowers/specs/: 2026-03-29-reconnection-improvements-design.md  2026-03-29-stream-reconnection-refinements-design.md  2026-03-30-pubsub-reconnection-redesign.md  2026-04-04-template-agent-design.md  2026-04-06-template-subgraphs-design.md  2026-04-10-template-editor-agent-design.md
frontend/: package-lock.json  package.json  webpack.config.js
frontend-next/: package.json
frontend-next/app/: layout.tsx  page.tsx
frontend-next/app/segment/: page.tsx
frontend-next/components/: AgentHistoryPanel.tsx  ComponentPalette.tsx  Nav.tsx  ProgressStatus.tsx  ReasoningPanel.tsx  SectionDropZone.tsx  SegmentCard.tsx  TemplateEditor.tsx  TemplateEditorCanvas.tsx  TemplatePreview.tsx
frontend-next/hooks/: useAgentThread.ts  useRestoreThread.ts
frontend-next/lib/: template-components.ts  types.ts
frontend/app/: globals.css
frontend/components/: ActivityIndicator.tsx  Nav.tsx  ReconnectionBanner.tsx
frontend/hooks/: useAgentThread.ts  useRestoreThread.ts  useThreadHistory.ts
frontend/public/: index.html
frontend/src/: App.tsx  globals.css  index.tsx
src/stream_reconnection_demo/: main.py
(+47 files in other folders)
